--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         </div>
       </div>
     </div>
+    <p>
+      My Github Repo : <a href="https://github.com/tinabals/my-weather-app"></a>
+    </p>
     <script src="app.js"></script>
   </body>
 </html>
