Added some styling to the repo link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-    <p>
+    <p class="repo">
       My Github Repo : <a href="https://github.com/tinabals/my-weather-app"></a>
     </p>
     <script src="app.js"></script>
