Added the git hub repo link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       </div>
     </div>
     <p class="repo">
-      My Github Repo : <a href="https://github.com/tinabals/my-weather-app"></a>
+      My Github Repo :
+      <a href="https://github.com/tinabals/my-weather-app"> Click Me</a>
     </p>
     <script src="app.js"></script>
   </body>
